--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,13 @@
 @font-face {
     font-family: BodoniXT;
     src: url(../fonts/BodoniXT.ttf);
+
+    font-family: OatCracker;
+    src: url(../fonts/oat-crackers-v01.ttf);
 }
 
 .information {
-    background-color: #F8DEB4;
+    background-color: #F8DEB4; 
     font-size: 11.5px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -26,7 +29,11 @@
     align-items: center;
 }
 
-.header {
+.information span {
+    margin: 0 1.5px;
+}
+
+.header { /* classe "header" da tag nav, não se trata da tag header */
     background-color: #F8FFFF;
     display: flex;
     height: 65px;
@@ -36,11 +43,11 @@
 
 .header > a {
    text-decoration: none;
-   color: #E9C377;
+   color: #EDAC6E;
    font-weight: bold;
    font-size: 25px;
    margin-left: 10%;
-   font-family: BodoniXT;
+   font-family: KasperLullaby;
 }
 
 .paginas {
@@ -48,8 +55,8 @@
     list-style: none;
     font-size: 15px;
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
+    font-weight: 400;
+    font-style: italic;
     margin-right: 10%;
 }
 
@@ -57,15 +64,52 @@
     margin: 0 5px;
     padding: 15px;
 }
+
 .paginas a {
     text-decoration: none;
     color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .principal {
     background-image: url(../images/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    background-position: center bottom;
+    height: 540px;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.textocontainer1 {
+   width: 60%;
+   display: flex;
+   flex-direction: column;
+}
+
+.textocontainer1 > h1 {
+    font-size: 1.5em;
+    font-family: OatCracker;
+    font-weight: normal;
+    color: #F8FFFF;
+}
+
+.textocontainer1 > p {
+    margin-top: 20px;
+}
+
+.textocontainer1 a {
+    font-size: 0.3em;
+    text-decoration: none;
+    color: #ffffff;
+    border-radius: 25px;
+    background-color: #445045;
+    padding: 8.25px;
+}
+
+.textocontainer1 a:hover {
+    background-color: #e68932;
 }
