--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@
     background-image: url(../images/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 540px;
+    height: 90vh;
     background-position: center center;
     display: flex;
     align-items: center;
@@ -91,7 +91,7 @@
 }
 
 .textocontainer1 > h1 {
-    font-size: 1.5em;
+    font-size: clamp(1.5em, 1em + 3vw, 4em);
     font-family: OatCracker;
     font-weight: normal;
     color: #F8FFFF;
@@ -102,7 +102,7 @@
 }
 
 .textocontainer1 a {
-    font-size: 0.3em;
+    font-size: clamp(0.5em, 0.5em + 0.8vw, 2em);
     text-decoration: none;
     color: #ffffff;
     border-radius: 25px;
@@ -112,4 +112,74 @@
 
 .textocontainer1 a:hover {
     background-color: #e68932;
+}
+
+.publicidade {
+   width: 100%;
+   overflow: hidden;
+   padding: 0 !important;
+}
+
+.slider {
+    width: 400%;
+    height: auto;
+    display: flex;
+}
+
+.slide img {
+    width: 100vw;
+    height: auto;
+}
+
+.publicidade input {
+    display: none; 
+}
+
+.navegacao-manual, .navegacao-auto {
+    display: flex;
+    justify-content: center;
+    width: 100%; /* faz com que os butões fiquem no meio, por que a div passar a ter o tamanho do seu pai em comprimento */
+    position: absolute;
+    margin-top: 28%;
+}
+
+.navegacao-manual .bt-manual, .navegacao-auto div {
+    border: 2px solid #242121;
+    padding: 7px;
+    border-radius: 50%;
+    transition: 1s;
+    cursor: pointer;
+}
+
+.navegacao-manual .bt-manual:not(:last-child), .navegacao-auto div:not(:last-child){
+    margin-right: 0.5%;
+}
+
+.navegacao-manual .bt-manual:hover {
+    background-color: wheat;
+}
+
+#radio1:checked ~ .navegacao-auto .bt-auton1{
+    background-color: wheat;
+}
+
+#radio2:checked ~ .navegacao-auto .bt-auton2{
+    background-color: wheat;
+}
+
+#radio3:checked ~ .navegacao-auto .bt-auton3{
+    background-color: wheat;
+}
+
+
+#radio1:checked ~ .primeiro {
+    margin-left: 0%;
+}
+
+#radio2:checked ~ .primeiro {
+    margin-left: -25.5%;
+}
+
+#radio3:checked ~ .primeiro {
+    margin-left: -51%;
 }
