--- a/css/style.css
+++ b/css/style.css
@@ -114,72 +114,66 @@
     background-color: #e68932;
 }
 
+/* Slideshow container */
 .publicidade {
-   width: 100%;
-   overflow: hidden;
-   padding: 0 !important;
+    width: 100%;
 }
 
 .slider {
-    width: 400%;
-    height: auto;
-    display: flex;
-}
-
-.slide img {
-    width: 100vw;
-    height: auto;
-}
-
-.publicidade input {
-    display: none; 
-}
-
-.navegacao-manual, .navegacao-auto {
-    display: flex;
-    justify-content: center;
-    width: 100%; /* faz com que os butões fiquem no meio, por que a div passar a ter o tamanho do seu pai em comprimento */
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	width: 100%;
+	height: 348px;
+  }
+  
+  /* Hide the images by default */
+  .slide {
+	display: none;
+  }
+  
+  /* Dot container */
+  .navegacao-manual {
+   	display: flex;
+	justify-content: center;
+	padding: 5px 0;
     position: absolute;
-    margin-top: 28%;
-}
-
-.navegacao-manual .bt-manual, .navegacao-auto div {
-    border: 2px solid #242121;
-    padding: 7px;
-    border-radius: 50%;
-    transition: 1s;
-    cursor: pointer;
-}
-
-.navegacao-manual .bt-manual:not(:last-child), .navegacao-auto div:not(:last-child){
-    margin-right: 0.5%;
-}
-
-.navegacao-manual .bt-manual:hover {
-    background-color: wheat;
-}
-
-#radio1:checked ~ .navegacao-auto .bt-auton1{
-    background-color: wheat;
-}
-
-#radio2:checked ~ .navegacao-auto .bt-auton2{
-    background-color: wheat;
-}
-
-#radio3:checked ~ .navegacao-auto .bt-auton3{
-    background-color: wheat;
-}
-
-
-#radio1:checked ~ .primeiro {
-    margin-left: 0%;
-}
-
-#radio2:checked ~ .primeiro {
-    margin-left: -25.5%;
-}
-
-#radio3:checked ~ .primeiro {
-    margin-left: -51%;
-}
+    width: 100%;
+    margin-top: 27%;
+  }
+  
+  /* The dots */
+  .bt-manual {
+	cursor: pointer;
+	height: 22.5px;
+	width: 22.5px;
+	margin: 0 0.5%;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+    border: solid 2px #72381d;
+  }
+  
+  /* Add a background color to the active dot */
+  .bt-manual.active {
+	background-color: wheat;
+  }
+  
+  /* Fading animation */
+  .fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
+  }
+  
+  @keyframes fade {
+	from {opacity: .3} 
+	to {opacity: 1}
+  }
