--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@
 	to {opacity: 1}
   }
 
-  .product-details {
+.product-details {
     margin-bottom: 20px;
     border-collapse: collapse;
     width: 100%;
@@ -226,4 +226,143 @@
     color: red;
     font-weight: bold;
     margin-top: 10px; /* Spacing above error message */
+}
+
+.container {
+    text-align: center;
+}
+
+.home-button {
+    display: inline-block;
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+.button1 {
+    background-color: #007bff; /* Azul */
+}
+.button1:hover {
+    background-color: #0056b3;
+}
+.button2 {
+    background-color: #28a745; /* Verde */
+}
+.button2:hover {
+    background-color: #218838;
+}
+.button3 {
+    background-color: #ffc107; /* Amarelo */
+}
+.button3:hover {
+    background-color: #e0a800;
+}
+.back-button {
+    position: absolute; /* Adjust positioning if needed */
+    top: 10px;
+    left: 10px;
+    padding: 10px 20px;
+    background-color: #6c757d; /* Cinza */
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+
+  .back-button:hover {
+    background-color: #5a6268;
+  }
+
+  .page-container {
+    margin-top: 50px;
+    text-align: center;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  th,
+  td {
+    padding: 10px;
+    border: 1px solid #ccc;
+  }
+
+  th {
+    background-color: #f2f2f2;
+  }
+
+  /* Define background colors for each column (non-vibrant) */
+  tr:nth-child(even) {
+    background-color: #eee;
+  }
+
+  /* Target first column for a slightly different background color */
+  tr th:first-child,
+  tr td:first-child {
+    background-color: #e8e8e8;
+  }
+
+  /* Target second column for a slightly different background color */
+  tr th:nth-child(2),
+  tr td:nth-child(2) {
+    background-color: #f5f5f5;
+  }
+
+  /* Target third and fourth columns for a slightly different background color */
+  tr th:nth-child(3),
+  tr th:nth-child(4),
+  tr td:nth-child(3),
+  tr td:nth-child(4) {
+    background-color: #f8f8f8;
+  }
+
+  .table-container {
+    margin-top: 20px;
+    padding: 20px;
+  }
+
+  .form-container {
+    margin-left: 80px;
+}
+
+.form-container .messages {
+    margin-bottom: 15px;
+}
+
+.form-container input[type="text"],
+.form-container input[type="number"] {
+    display: block;
+    margin-bottom: 15px;
+    width: 150px;
+}
+
+.form-container input[type="file"] {
+    margin-bottom: 15px;
+}
+
+.form-container label {
+    display: inline-block;
+    float: left;
+    width: 100px;
+}
+
+.form-container button {
+    display: block;
+    padding: 5px 10px;
+    background-color: #8daf15;
+    color: #fff;
+    border: none;
+}
+
+.form-container .link-to-product-details {
+    margin-top: 20px;
+    display: inline-block;
 }
