--- a/css/card.css
+++ b/css/card.css
@@ -8,7 +8,7 @@
 .container {
   margin-top: 25px;
   padding: 20px;
-  background-color: #FFFAFA;
+  background-color: #FFF;
   width: 80%;
   font-family: "Poppins", sans-serif;
 }
